# BioInformatics2025

./: .gitignore  Documentation.docx  thema_1.py  thema_2.py  thema_3.py
Notebooks/: 1.ipynb
auxiliary/: pyproject.toml
auxiliary2025/: alignment.txt  clustalw.aln  custom_msa.fasta  datasetA.fasta  datasetB.fasta  datasetC.fasta  random_alignment.txt  trained_hmm_profile.pkl
source2025/: hmm.py  thema_1.py  thema_2.py  thema_3.py  thema_4.py
source_code/: hmm.py  thema_1.py  thema_2.py  thema_3.py  thema_4.py
